# mshadow

./: CMakeLists.txt
cmake/: Cuda-utils.cmake  Dependencies.cmake  SetBuildType.cmake
cmake/modules/: FindCUDNN.cmake  FindMKL.cmake
mshadow/: CMakeLists.txt
test/: CMakeLists.txt  test.h
